deploy/local-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandboxes
